--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "markdoc-py"
-version = "0.1.0"
+dynamic = ["version"]
 description = "Python port of Markdoc"
 authors = [
     { name = "Oskar Skoog", email = "oskar@osd.se" },
@@ -36,3 +36,6 @@ line-length = 100
 
 [tool.hatch.build.targets.wheel]
 packages = ["markdocpy"]
+
+[tool.hatch.version]
+path = "markdocpy/version.py"
